pass new record and display

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <button id=addEmployeeBtn>Submit</button>
     </div>
 
-    <div is="outputArea">
+    <div id="outputArea">
         <ul>
             <li></li>
         </ul>
