got delete button to work yeah

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <input id=idIn type='text' placeholder='ID'>
         <input id=titleIn type='text' placeholder='Title'>
         <input id=salaryIn type='number' placeholder='Annual Salary'>
-        <button id=addEmployeeBtn>Submit</button>
+        <button class=addEmployeeBtn>Submit</button>
     </div>
 
     <div id="outputArea">
