basic mode completed

--- a/index.html
+++ b/index.html
@@ -23,11 +23,13 @@
         <button class=addEmployeeBtn>Submit</button>
     </div>
 
-    <div id="outputArea">
-        <ul>
+    <div>
+        <ul id="outputArea">
             <li></li>
         </ul>
-
+    </div>
+    <div>
+        <h2 id=showMonthly></h2>
     </div>
 
 </div>
