--- a/index.html
+++ b/index.html
@@ -28,10 +28,21 @@
             <li></li>
         </ul>
     </div>
+    <!--<h2>Employees</h2>
+   <table id=tableAttempt>
+        <tr id=tableHeader>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Id</th>
+            <th>Title</th>
+            <th>Annual Salary</th>
+            <th>Delete</th>
+        </tr>
+    </table>
+-->
     <div>
-        <h2 id=showMonthly></h2>
+        <h2 id=showMonthly class='money'></h2>
     </div>
-
 </div>
 
 <body>
