new attempt to clear input before WM break

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <input id=lastNameIn type='text' placeholder='Last Name'>
         <input id=idIn type='text' placeholder='ID'>
         <input id=titleIn type='text' placeholder='Title'>
-        <input id=salaryIn type='number' placeholder='Annual Salary'>
+        <input id=salaryIn type='text' placeholder='Annual Salary'>
         <button class=addEmployeeBtn>Submit</button>
     </div>
 
