--- a/index.html
+++ b/index.html
@@ -28,18 +28,22 @@
             <li></li>
         </ul>
     </div>
-    <!--<h2>Employees</h2>
-   <table id=tableAttempt>
-        <tr id=tableHeader>
-            <th>First Name</th>
-            <th>Last Name</th>
-            <th>Id</th>
-            <th>Title</th>
-            <th>Annual Salary</th>
-            <th>Delete</th>
-        </tr>
+    <h2>Employees</h2>
+    <table>
+        <thead>
+            <tr>
+                <th>First name</th>
+                <th>Last name</th>
+                <th>ID</th>
+                <th>Title</th>
+                <th>Annual Salary</th>
+                <th>Delete</th>
+            </tr>
+        </thead>
+        <tbody id='tableAttempt2'>
+        </tbody>
     </table>
--->
+
     <div>
         <h2 id=showMonthly class='money'></h2>
     </div>
