stopping point Satirday night

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <input id=lastNameIn type='text' placeholder='Last Name'>
         <input id=idIn type='text' placeholder='ID'>
         <input id=titleIn type='text' placeholder='Title'>
-        <input id=salaryIn type='text' placeholder='Annual Salary'>
+        <input id=salaryIn type='number' placeholder='Annual Salary'>
         <button class=addEmployeeBtn>Submit</button>
     </div>
 
@@ -45,7 +45,7 @@
     </table>
 
     <div>
-        <h2 id=showMonthly class='money'></h2>
+        <h2 id=showMonthly>Total Monthly $:</h2>
     </div>
 </div>
 
